# question-generation

./: .gitignore  README.md  fine_tune_qg.py  gemini_eval.py  gpt_eval.py  main.py  pyproject.toml
